deployment/redis_service/stateful-set.yaml
# Copy-pasta from https://github.com/sanderploegsma/redis-cluster/blob/master/redis-cluster.yml
# docs at https://github.com/sanderploegsma/redis-cluster
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cluster
  namespace: app-backends
  labels:
    app: redis-cluster
spec:
  serviceName: redis-cluster
  replicas: 1
  selector:
    matchLabels:
      app: redis-cluster
  template:
    metadata:
      labels:
        app: redis-cluster
    spec:
      containers:
      - name: redis
        image: eu.gcr.io/uob-tv-project-dev/redis:1
        ports:
        - containerPort: 6379
          name: client
        - containerPort: 16379
          name: gossip
        command: ["/conf/fix-ip.sh", "redis-server", "/conf/redis.conf"]
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "redis-cli -h $(hostname) ping"
          initialDelaySeconds: 15
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "redis-cli -h $(hostname) ping"
          initialDelaySeconds: 20
          periodSeconds: 3
        volumeMounts:
        - name: conf
          mountPath: /conf
          readOnly: false
        - name: data
          mountPath: /data
          readOnly: false
      volumes:
      - name: conf
        configMap:
          name: redis-cluster
          defaultMode: 0755
  volumeClaimTemplates:
  - metadata:
      name: data
      namespace: app-backends
      labels:
        name: redis-cluster
      annotations:
        volume.alpha.kubernetes.io/storage-class: gcePersistentDisk
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gcePersistentDisk
      resources:
        requests:
          storage: 100Mi
