deployment/redis_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster
  namespace: app-backends
  labels:
    app: redis-cluster
spec:
  ports:
  - port: 6379
    targetPort: 6379
    name: client
  - port: 16379
    targetPort: 16379
    name: gossip
  clusterIP: None
  selector:
    app: redis-cluster
