deployment/redis_service/istio-routing.yaml
# route all requests to users to users-service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-cluster-routes
  namespace: app-backends
spec:
  hosts:
  - redis-cluster
  tcp:
  - match:
    - port: 6379
    route:
    - destination:
        host: redis-cluster
        port:
          number: 6379
  - match:
    - port: 16379
    route:
    - destination:
        host: redis-cluster
        port:
          number: 16379
